--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.1",
     "flowbite": "^1.7.0",
+    "hoist-non-react-statics": "^3.3.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-redux": "^7.2.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
