--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react-big-calendar": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "react-redux": "^7.2.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
