piechart and dailychart done

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/geo": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +18,7 @@
     "hoist-non-react-statics": "^3.3.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
