--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@nivo/bar": "^0.80.0",
+    "@nivo/calendar": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@nivo/funnel": "^0.80.0",
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
