--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.14.8",
+    "@mui/styled-engine": "^5.14.8",
     "@nivo/bar": "^0.80.0",
     "@nivo/calendar": "^0.80.0",
     "@nivo/core": "^0.80.0",
