--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
